# test-lfs-repo

./: .gitattributes  pyproject.toml
src/test_lfs_repo/: __init__.py  lfs_module.py
