[project]
name = "test-lfs-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zanie Blue", email = "contact@zanie.dev" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test-lfs-repo = "test_lfs_repo:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
